# Cryptopic

./: .gitignore  README.md
cryptopic/: db.sqlite3  manage.py
cryptopic/cryptopic/: asgi.py  settings.py  urls.py  wsgi.py
cryptopic/main/: urls.py  views.py
cryptopic/main/cpp_services/: README.md
cryptopic/main/cpp_services/include/: dct_encryptor.hpp  encryptor_consts.hpp  lsb_encryptor.hpp  utils.h
cryptopic/main/cpp_services/src/: CMakeLists.txt  main.cpp  utils.cpp
cryptopic/main/static/main/css/: main.css
cryptopic/main/static/main/js/: app-libs.js  app.js
cryptopic/main/static/main/js/compressor/: compressor.js  wasm_compressor.js  wasm_compressor.wasm
cryptopic/main/templates/main/: index.html
